--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,13 +14,17 @@ spring:
       ddl-auto: validate
   application:
     name: clients-api
+
+
 server:
   port: 8081
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-  instance:
-    leaseRenewalIntervalInSeconds: 10
-    metadataMap:
-      instanceId: ${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${server.port}}}
+
+
+  eureka:
+    client:
+      register-with-eureka: true
+      fetch-registry: true
+      service-url:
+        defaultZone: http://localhost:8761/eureka/
+      instance:
+        hostname: localhost
